# img2latex-vlm

./: .gitignore  Dockerfile.serve  Dockerfile.train  README.md  pyproject.toml
img2latex_vlm/: check_image_dimensions.py  data_process.py  eval.py  img2latex_vlm_trainer.py  merge_lora_checkpoint.py  metrics.py  push_model_to_hub.py  serve_entrypoint.py  train.py  utils.py
scripts/: gcp_build_and_push.sh  gcp_deploy_serve.py  gcp_submit_train.py  serve.sh  train.sh
terraform/: registry.tf  storage.tf  variables.tf
tests/: test_endpoint.py  test_metrics.py
